--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -35,7 +35,8 @@ header {
 	height: 800px;
 	min-height: 500px;
 	width: 100%;
-	background: #161415 url(../images/header-background.jpg) no-repeat top center;
+	background: #161415;
+	/* url(../images/header-background.jpg) no-repeat bottom center*/
 	background-size: cover !important;
 	-webkit-background-size: cover !important;
 	text-align: center;
@@ -67,7 +68,7 @@ header .banner-text {
 }
 
 header .banner-text h1 {
-	font: 60px/1.1em 'opensans-bold', sans-serif;
+	font: 40px/1.1em 'opensans-bold', sans-serif !important;
 	color: #fff;
 	letter-spacing: -2px;
 	margin: 0 auto 18px auto;
@@ -113,7 +114,7 @@ header .social li a {
 }
 
 header .social li a:hover {
-	color: #9d561d;
+	color: #11ABB0;
 }
 
 /* scrolldown link */
@@ -138,7 +139,7 @@ header .scrolldown a {
 }
 
 header .scrolldown a:hover {
-	color: #9d561d;
+	color: #11ABB0;
 }
 
 /* primary navigation
@@ -156,8 +157,9 @@ header .scrolldown a:hover {
 #nav-wrap {
 	font: 16px 'opensans-bold', sans-serif;
 	width: 100%;
+	background-color: #000;
 	text-transform: uppercase;
-	letter-spacing: 2.5px;
+	letter-spacing: 2px;
 	margin: 0 auto;
 	z-index: 100;
 	position: fixed;
@@ -214,7 +216,7 @@ ul#nav li a:active {
 }
 
 ul#nav li.current a {
-	color: #FFFFFF;
+	color: #11ABB0;
 }
 
 
@@ -224,9 +226,22 @@ ul#nav li.current a {
 
 #about {
 	background: #2B2B2B;
-	padding-top: 96px;
-	padding-bottom: 66px;
+	padding-top: 90px;
+	padding-bottom: 48px;
 	overflow: hidden;
+}
+
+#about .about {
+	padding-left: 96px;
+	padding-top: 24px;
+	padding-bottom: 48px;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+#about .about-text p {
+	color: #afafaf;
 }
 
 #about a,
@@ -236,7 +251,7 @@ ul#nav li.current a {
 
 #about a:hover,
 #about a:focus {
-	color: #9d561d;
+	color: #11ABB0;
 }
 
 #about h2 {
@@ -250,19 +265,20 @@ ul#nav li.current a {
 	color: #7A7A7A;
 }
 
-#about .profile-pic {
+#about .about-image .profile-pic {
 	position: relative;
-	width: 120px;
-	height: 120px;
+	width: 300px;
+	height: 300px;
 	border-radius: 100%;
+	/* filter: grayscale(100%); */
 }
 
-#about .contact-details {
-	width: 41.66667%;
+#about .about-text {
+	width: 60%;
 }
 
-#about .download {
-	width: 58.33333%;
+#about .about-text .row .download {
+	width: 60%;
 	padding-top: 6px;
 }
 
@@ -342,168 +358,18 @@ ul#nav li.current a {
 }
 
 #publications .main-col {
-	padding-right: 10%;
+	padding-right: 2%;
 }
 
-.education,
-.work {
-	margin-bottom: 48px;
-	padding-bottom: 24px;
-	border-bottom: 1px solid #E8E8E8;
+#publications ol li div {
+	padding-bottom: 6px;
+	font: 15px/32px 'opensans', sans-serif;
 }
 
-#publications .info {
-	font: 16px/24px 'librebaskerville-italic', serif;
-	color: #6E7881;
-	margin-bottom: 18px;
-	margin-top: 9px;
+#publications ol li {
+	padding-left: 16px;
 }
 
-#publications .info span {
-	margin-right: 5px;
-	margin-left: 5px;
-}
-
-#publications .date {
-	font: 15px/24px 'opensans-regular', sans-serif;
-	margin-top: 6px;
-}
-
-/*----------------------------------------------*/
-/*	Skill Bars
-/*----------------------------------------------*/
-
-.bars {
-	width: 95%;
-	float: left;
-	padding: 0;
-	text-align: left;
-}
-
-.bars .skills {
-	margin-top: 36px;
-	list-style: none;
-}
-
-.bars li {
-	position: relative;
-	margin-bottom: 60px;
-	background: #ccc;
-	height: 42px;
-	border-radius: 3px;
-}
-
-.bars li em {
-	font: 15px 'opensans-bold', sans-serif;
-	color: #313131;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	font-weight: normal;
-	position: relative;
-	top: -36px;
-}
-
-.bar-expand {
-	position: absolute;
-	left: 0;
-	top: 0;
-
-	margin: 0;
-	padding-right: 24px;
-	background: #313131;
-	display: inline-block;
-	height: 42px;
-	line-height: 42px;
-	border-radius: 3px 0 0 3px;
-}
-
-/*
-.git {
-  	-moz-animation: git 2s ease;
-  	-webkit-animation: git 2s ease;
-}
-.illustrator {
-  	-moz-animation: illustrator 2s ease;
-  	-webkit-animation: illustrator 2s ease;
-}
-.reactjs {
-  	-moz-animation: reactjs 2s ease;
-  	-webkit-animation: reactjs 2s ease;
-}
-.css {
-  	-moz-animation: css 2s ease;
-  	-webkit-animation: css 2s ease;
-}
-.html5 {
-  	-moz-animation: html5 2s ease;
-  	-webkit-animation: html5 2s ease;
-}
-.vuejs {
-  	-moz-animation: vuejs 2s ease;
-  	-webkit-animation: vuejs 2s ease;
-}
-.mongodb {
-  	-moz-animation: mongodb 2s ease;
-  	-webkit-animation: mongodb 2s ease;
-}
-
-@-moz-keyframes git {
-  0%   { width: 0px;  }
-  100% { width: 60%;  }
-}
-@-moz-keyframes illustrator {
-  0%   { width: 0px;  }
-  100% { width: 55%;  }
-}
-@-moz-keyframes reactjs {
-  0%   { width: 0px;  }
-  100% { width: 50%;  }
-}
-@-moz-keyframes css {
-  0%   { width: 0px;  }
-  100% { width: 90%;  }
-}
-@-moz-keyframes html5 {
-  0%   { width: 0px;  }
-  100% { width: 80%;  }
-}
-@-moz-keyframes vuejs {
-  0%   { width: 0px;  }
-  100% { width: 50%;  }
-}
-@-moz-keyframes mongodb {
-  0%   { width: 0px;  }
-  100% { width: 80%;  }
-}
-
-@-webkit-keyframes photoshop {
-  0%   { width: 0px;  }
-  100% { width: 60%;  }
-}
-@-webkit-keyframes illustrator {
-  0%   { width: 0px;  }
-  100% { width: 55%;  }
-}
-@-webkit-keyframes reactjs {
-  0%   { width: 0px;  }
-  100% { width: 50%;  }
-}
-@-webkit-keyframes css {
-  0%   { width: 0px;  }
-  100% { width: 90%;  }
-}
-@-webkit-keyframes html5 {
-  0%   { width: 0px;  }
-  100% { width: 80%;  }
-}
-@-webkit-keyframes vuejs {
-  0%   { width: 0px;  }
-  100% { width: 50%;  }
-}
-@-webkit-keyframes mongodb {
-  0%   { width: 0px;  }
-  100% { width: 80%;  }
-}  */
 
 /* ------------------------------------------------------------------ */
 /* e. Research Section
@@ -512,75 +378,24 @@ ul#nav li.current a {
 #research {
 	background: #ebeeee;
 	padding-top: 90px;
-	padding-bottom: 60px;
+	padding-bottom: 48px;
+}
+
+#research .research-content {
+	font: 15px/30px 'opensans-regular', sans-serif;
 }
 
 #research h1 {
-	font: 15px/24px 'opensans-semibold', sans-serif;
+	font: 24px 'opensans-bold', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	text-align: center;
 	margin-bottom: 48px;
-	color: #95A3A3;
 }
 
-/* popup modal */
-.popup-modal {
-	max-width: 550px;
-	background: #fff;
-	position: relative;
-	margin: 0 auto;
-}
-
-.popup-modal .description-box {
-	padding: 12px 36px 18px 36px;
-}
-
-.popup-modal .description-box h4 {
-	font: 15px/24px 'opensans-bold', sans-serif;
-	margin-bottom: 12px;
-	color: #111;
-}
-
-.popup-modal .description-box p {
-	font: 14px/24px 'opensans-regular', sans-serif;
-	color: #A1A1A1;
-	margin-bottom: 12px;
-}
-
-.popup-modal .description-box .categories {
-	font: 11px/21px 'opensans-light', sans-serif;
-	color: #A1A1A1;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	display: block;
-	text-align: left;
-}
-
-.popup-modal .description-box .categories i {
-	margin-right: 8px;
-}
-
-.popup-modal .link-box {
-	padding: 18px 36px;
-	background: #111;
-	text-align: left;
-}
-
-.popup-modal .link-box a {
-	color: #fff;
-	font: 11px/21px 'opensans-bold', sans-serif;
-	text-transform: uppercase;
-	letter-spacing: 3px;
-	cursor: pointer;
-}
-
-.popup-modal a:hover {
-	color: #00CCCC;
-}
-
-.popup-modal a.popup-modal-dismiss {
-	margin-left: 24px;
+#research h2 {
+	font: 22px/30px 'opensans-semibold', sans-serif;
+	margin-bottom: 16px;
+	margin-top: 16px;
 }
 
 
@@ -624,57 +439,6 @@ ul#nav li.current a {
 	color: #fff;
 }
 
-#call-to-action h1 span {
-	display: none;
-}
-
-#call-to-action .header-col h1:before {
-	font-family: 'FontAwesome';
-	content: "\f0ac";
-	padding-right: 10px;
-	font-size: 72px;
-	line-height: 72px;
-	text-align: left;
-	float: left;
-	color: #fff;
-}
-
-#call-to-action .action {
-	margin-top: 12px;
-}
-
-#call-to-action h2 {
-	font: 28px/36px 'opensans-bold', sans-serif;
-	color: #EBEEEE;
-	margin-bottom: 6px;
-}
-
-#call-to-action h2 a {
-	color: inherit;
-}
-
-#call-to-action p {
-	color: #636363;
-	font-size: 17px;
-}
-
-/*#
-call-to-action .button {
-	color:#fff;
-   background: #0D0D0D;
-}
-*/
-#call-to-action .button:hover,
-#call-to-action .button:active {
-	background: #FFFFFF;
-	color: #0D0D0D;
-}
-
-#call-to-action p span {
-	font-family: 'opensans-semibold', sans-serif;
-	color: #D8D8D8;
-}
-
 /* ------------------------------------------------------------------
 /* g. News
 /* ------------------------------------------------------------------ */
@@ -685,9 +449,9 @@ call-to-action .button {
 }
 
 #news h1 {
-	font: 18px/24px 'opensans-bold', sans-serif;
+	font: 30px/24px 'opensans-bold', sans-serif;
 	text-transform: uppercase;
-	letter-spacing: 5px;
+	letter-spacing: 1px;
 	color: #fff;
 	padding-bottom: 16px;
 }
@@ -795,22 +559,26 @@ call-to-action .button {
 	padding-top: 96px;
 	padding-bottom: 102px;
 	color: #636363;
-	align-content: center;
+
 }
 
-#contact h1 {
-	align-content: center;
+#contact .contact-details {
+	display: flex;
+}
+
+#contact .contact-details h1 {
 	font: 18px/24px 'opensans-bold', sans-serif;
 	text-transform: uppercase;
-	letter-spacing: 3px;
+	letter-spacing: 1px;
 	color: #EBEEEE;
 	margin-bottom: 6px;
+	padding-left: 30%;
 }
 
-#contact h4 {
+#contact .contact-details p {
+	padding-left: 20%;
 	align-content: center;
-	font: 16px/24px 'opensans-bold', sans-serif;
-	color: #EBEEEE;
+	font: 16px/30px 'opensans-regular', sans-serif;
 	margin-bottom: 6px;
 }
 
@@ -842,6 +610,7 @@ footer a:focus {
 footer .copyright {
 	margin: 0;
 	padding: 0;
+	color: #acabab;
 }
 
 footer .copyright li {
@@ -899,7 +668,7 @@ footer .social-links li:first-child {
 	display: block;
 	width: 60px;
 	height: 60px;
-	background-color: #525252;
+	background-color: #0F9095;
 
 	-webkit-transition: all 0.2s ease-in-out;
 	-moz-transition: all 0.2s ease-in-out;
