--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -113,7 +113,7 @@ header .social li a {
 }
 
 header .social li a:hover {
-	color: #11ABB0;
+	color: #d0d007;
 }
 
 /* scrolldown link */
@@ -138,7 +138,7 @@ header .scrolldown a {
 }
 
 header .scrolldown a:hover {
-	color: #11ABB0;
+	color: #d0d007;
 }
 
 /* primary navigation
@@ -211,7 +211,7 @@ ul#nav li a {
 }
 
 ul#nav li a:hover {
-	color: #11ABB0;
+	color: #d0d007;
 }
 
 ul#nav li a:active {
@@ -219,7 +219,7 @@ ul#nav li a:active {
 }
 
 ul#nav li.current a {
-	color: #11ABB0;
+	color: #d0d007;
 }
 
 
@@ -244,6 +244,7 @@ ul#nav li.current a {
 }
 
 #about .about-text p {
+	text-align: justify;
 	color: #afafaf;
 }
 
@@ -254,7 +255,7 @@ ul#nav li.current a {
 
 #about a:hover,
 #about a:focus {
-	color: #11ABB0;
+	color: #2cd1ff;
 }
 
 #about h2 {
@@ -314,18 +315,19 @@ ul#nav li.current a {
 	padding-top: 90px;
 	padding-bottom: 72px;
 	overflow: hidden;
+	text-align: justify;
 }
 
 #publications a,
 #publications a:visited {
-	color: #085d60;
+	color: #1142b0;
 	text-decoration: underline;
 	margin-left: 5px;
 }
 
 #publications a:hover,
 #publications a:focus {
-	color: #085d60;
+	color: #1142b0;
 }
 
 #publications .extraInfoPanel {
@@ -349,7 +351,7 @@ ul#nav li.current a {
 }
 
 #publications h1 span {
-	border-bottom: 3px solid #085d60;
+	border-bottom: 3px solid #1142b0;
 	padding-bottom: 6px;
 }
 
@@ -387,6 +389,7 @@ ul#nav li.current a {
 
 #research .research-content {
 	font: 15px/30px 'opensans-regular', sans-serif;
+	text-align: justify;
 }
 
 #research h1 {
@@ -448,6 +451,7 @@ ul#nav li.current a {
 /* ------------------------------------------------------------------ */
 
 #news .text-container {
+	text-align: justify;
 	padding-top: 90px;
 	padding-bottom: 72px;
 }
@@ -470,7 +474,7 @@ ul#nav li.current a {
 	padding-top: 4px;
 	font: 15px/22px 'opensans-bold', sans-serif;
 	letter-spacing: 1px;
-	color: #11ABB0;
+	color: #2cd2ff;
 }
 
 #news .content {
@@ -478,6 +482,16 @@ ul#nav li.current a {
 	padding-bottom: 16px;
 	color: #E3E3E3;
 }
+
+
+#news .content a:hover {
+	color: #2cd2ff;
+}
+
+#news .content a:visited {
+	color: #2cd2ff;
+}
+
 
 #news .header-col h1:before {
 	font-family: 'FontAwesome';
@@ -626,7 +640,7 @@ footer .copyright li:before {
 	content: "\2022";
 	padding-left: 10px;
 	padding-right: 10px;
-	color: #095153;
+	color: #d0d007;
 }
 
 footer .copyright li:first-child:before {
@@ -645,7 +659,7 @@ footer .social-links li {
 	margin: 0;
 	padding: 0;
 	margin-left: 42px;
-	color: #11ABB0;
+	color: #d0d007;
 }
 
 footer .social-links li:first-child {
@@ -666,7 +680,7 @@ footer .social-links li:first-child {
 	display: block;
 	width: 60px;
 	height: 60px;
-	background-color: #0F9095;
+	background-color: #fff;
 
 	-webkit-transition: all 0.2s ease-in-out;
 	-moz-transition: all 0.2s ease-in-out;
@@ -674,12 +688,12 @@ footer .social-links li:first-child {
 	-ms-transition: all 0.2s ease-in-out;
 	transition: all 0.2s ease-in-out;
 
-	color: #fff;
+	color: #000;
 	font-size: 21px;
 	line-height: 60px;
 	border-radius: 100%;
 }
 
 #go-top a:hover {
-	background-color: #0F9095;
+	background-color: #d0d007;
 }
