--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -485,11 +485,11 @@ ul#nav li.current a {
 
 
 #news .content a:hover {
-	color: #2cd2ff;
+	color: #b9b75f;
 }
 
 #news .content a:visited {
-	color: #2cd2ff;
+	color: #b9b75f;
 }
 
 
