--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -31,15 +31,15 @@ body {
 /* ------------------------------------------------------------------ */
 
 header {
-	position: relative;
-	height: 800px;
-	min-height: 500px;
-	width: 100%;
-	background: #161415 url(../images/background.png) no-repeat bottom center;
-	background-size: cover !important;
-	-webkit-background-size: cover !important;
-	text-align: center;
-	overflow: hidden;
+	/* position: relative; */
+	/* height: 800px;
+	min-height: 500px; */
+	/* width: 100%; */
+	background: #ffffffef url(../images/background.png) no-repeat center;
+	/* background-size: cover !important; */
+	/* -webkit-background-size: cover !important; */
+	/* text-align: center;
+	overflow: hidden; */
 }
 
 /* vertically center banner section */
@@ -59,6 +59,7 @@ header .banner {
 	margin: 0 auto;
 	width: 85%;
 	padding-bottom: 30px;
+	padding-top: 700px;
 	text-align: center;
 }
 
@@ -68,15 +69,15 @@ header .banner-text {
 
 header .banner-text h1 {
 	font: 40px/1.1em 'opensans-bold', sans-serif !important;
-	color: #fff;
+	color: #000;
 	letter-spacing: -2px;
 	margin: 0 auto 18px auto;
-	text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
+	/* text-shadow: 0px 1px 3px rgba(0, 0, 0, .8); */
 }
 
 header .banner-text h3 {
 	font: 18px/1.9em 'librebaskerville-regular', serif;
-	color: #FFFFFF;
+	color: #000;
 	margin: 0 auto;
 	width: 70%;
 	text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
@@ -113,8 +114,10 @@ header .social li a {
 }
 
 header .social li a:hover {
-	color: #d0d007;
+	color: #0e8f51;
 }
+
+
 
 /* scrolldown link */
 header .scrolldown a {
@@ -122,13 +125,12 @@ header .scrolldown a {
 	bottom: 30px;
 	left: 50%;
 	margin-left: -29px;
-	color: #fff;
+	color: #000;
 	display: block;
 	height: 42px;
 	width: 42px;
 	font-size: 42px;
 	line-height: 42px;
-	color: #fff;
 	border-radius: 100%;
 
 	-webkit-transition: all .3s ease-in-out;
@@ -138,7 +140,7 @@ header .scrolldown a {
 }
 
 header .scrolldown a:hover {
-	color: #d0d007;
+	color: #0e8f51;
 }
 
 /* primary navigation
@@ -211,7 +213,7 @@ ul#nav li a {
 }
 
 ul#nav li a:hover {
-	color: #d0d007;
+	color: #0e8f51;
 }
 
 ul#nav li a:active {
@@ -219,7 +221,7 @@ ul#nav li a:active {
 }
 
 ul#nav li.current a {
-	color: #d0d007;
+	color: #0e8f51;
 }
 
 
@@ -250,15 +252,16 @@ ul#nav li.current a {
 
 #about a,
 #about a:visited {
-	color: #fff;
-}
-
-#about a:hover,
-#about a:focus {
-	color: #2cd1ff;
+	color: #afafaf;
+	text-decoration-thickness: 2px;
 }
 
 #about h2 {
+	font: 33px/30px 'opensans-bold', sans-serif;
+	color: #fff;
+}
+
+#about h3 {
 	font: 22px/30px 'opensans-bold', sans-serif;
 	color: #fff;
 	margin-bottom: 12px;
@@ -274,12 +277,25 @@ ul#nav li.current a {
 	width: 300px;
 	height: 300px;
 	border-radius: 100%;
-	/* filter: grayscale(100%); */
+}
+
+.uwf-pic {
+	width: 6%;
+	margin-right: 10px;
 }
 
 #about .about-text {
 	width: 60%;
+	margin-bottom: 24px;
 }
+
+
+#about .about-uwf-image {
+	display: flex;
+	align-items: center;
+	margin-bottom: 24px;
+}
+
 
 #about .about-text .row .download {
 	width: 60%;
@@ -405,6 +421,18 @@ ul#nav li.current a {
 	margin-top: 16px;
 }
 
+#research a {
+	color: #838c95;
+	text-decoration-color: #0e8f51;
+	text-decoration-thickness: 2px;
+}
+
+#research a:visited {
+	color: #838c95;
+	text-decoration-color: #0e8f51;
+	text-decoration-thickness: 2px;
+}
+
 
 /* fadein/fadeout effect for modal popup
 /* ------------------------------------------------------------------ */
@@ -472,9 +500,9 @@ ul#nav li.current a {
 #news .title {
 	margin: 0 0 10px 0;
 	padding-top: 4px;
-	font: 15px/22px 'opensans-bold', sans-serif;
+	font: 20px/22px 'opensans-bold', sans-serif;
 	letter-spacing: 1px;
-	color: #2cd2ff;
+	color: #009CDE;
 }
 
 #news .content {
@@ -485,11 +513,23 @@ ul#nav li.current a {
 
 
 #news .content a:hover {
-	color: #b9b75f;
+	color: #E3E3E3;
+	text-decoration-color: #0e8f51;
+	text-decoration-thickness: 2px;
 }
 
 #news .content a:visited {
-	color: #b9b75f;
+	/* color:  */
+	color: #E3E3E3;
+	text-decoration-color: #0e8f51;
+	text-decoration-thickness: 2px;
+}
+
+#news .content a {
+	/* color:  */
+	color: #E3E3E3;
+	text-decoration-color: #0e8f51;
+	text-decoration-thickness: 2px;
 }
 
 
@@ -578,6 +618,11 @@ ul#nav li.current a {
 	display: flex;
 }
 
+#contact .contact-details a {
+	color: #636363;
+	text-decoration: none;
+}
+
 #contact .contact-details h1 {
 	font: 18px/24px 'opensans-bold', sans-serif;
 	text-transform: uppercase;
@@ -640,7 +685,7 @@ footer .copyright li:before {
 	content: "\2022";
 	padding-left: 10px;
 	padding-right: 10px;
-	color: #d0d007;
+	color: #0e8f51;
 }
 
 footer .copyright li:first-child:before {
@@ -648,22 +693,27 @@ footer .copyright li:first-child:before {
 }
 
 /* social links */
-footer .social-links {
+#about .social-links {
 	margin: 18px 0 30px 0;
 	padding: 0;
 	font-size: 30px;
 }
 
-footer .social-links li {
-	display: inline-block;
+#about .social-links li {
+	display: inline;
 	margin: 0;
 	padding: 0;
 	margin-left: 42px;
-	color: #d0d007;
+	color: #0e8f51;
 }
 
-footer .social-links li:first-child {
+#about .social-links li:first-child {
 	margin-left: 0;
+}
+
+.social-links li a img {
+	width: 2.5%;
+	filter: grayscale(100%);
 }
 
 /* Go To Top Button */
@@ -695,5 +745,5 @@ footer .social-links li:first-child {
 }
 
 #go-top a:hover {
-	background-color: #d0d007;
+	background-color: #025B30;
 }
